--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.8.0",
     "nodemailer": "^6.9.16",
     "winston": "^3.16.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "node server.js",
